Улучшает Lightjouse stats + чинит пагинацию в news

--- a/source/index.html
+++ b/source/index.html
@@ -128,7 +128,7 @@
                       srcset="img/hero/lady-yellow-tablet.jpg 1x, img/hero/lady-yellow-tablet@2x.jpg 2x" width="1440"
                       height="1024">
                     <img src="img/hero/lady-yellow-mobile.jpg" srcset="img/hero/lady-yellow-mobile@2x.jpg 2x"
-                      width="768" height="568" alt="">
+                      width="768" height="568" alt="" loading="lazy">
                   </picture>
                 </div>
                 <div class="hero__text-wrapper">
@@ -174,7 +174,7 @@
                       srcset="img/hero/people-tablet.jpg 1x, img/hero/people-tablet@2x.jpg 2x" width="1440"
                       height="1024">
                     <img src="img/hero/people-mobile.jpg" srcset="img/hero/people-mobile@2x.jpg 2x" width="768"
-                      height="568" alt="">
+                      height="568" alt="" loading="lazy">
                   </picture>
                 </div>
                 <div class="hero__text-wrapper">
@@ -222,7 +222,7 @@
                       srcset="img/hero/company-tablet.jpg 1x, img/hero/company-tablet@2x.jpg 2x" width="1440"
                       height="1024">
                     <img src="img/hero/company-mobile.jpg" srcset="img/hero/company-mobile@2x.jpg 2x" width="768"
-                      height="568" alt="">
+                      height="568" alt="" loading="lazy">
                   </picture>
                 </div>
                 <div class="hero__text-wrapper">
@@ -350,7 +350,7 @@
                       srcset="img/programs/women-tablet.jpg 1x, img/programs/women-tablet@2x.jpg 2x" width="324"
                       height="420">
                     <img src="img/programs/women-mobile.jpg" srcset="img/programs/women-mobile@2x.jpg 2x" width="290"
-                      height="400" alt="">
+                      height="400" alt="" loading="lazy">
                   </picture>
                 </div>
                 <div class="programs__item-text-container">
@@ -387,7 +387,7 @@
                       srcset="img/programs/boy-tablet.jpg 1x, img/programs/boy-tablet@2x.jpg 2x" width="324"
                       height="420">
                     <img src="img/programs/boy-mobile.jpg" srcset="img/programs/boy-mobile@2x.jpg 2x" width="290"
-                      height="400" alt="">
+                      height="400" alt="" loading="lazy">
                   </picture>
                 </div>
                 <div class="programs__item-text-container">
@@ -424,7 +424,7 @@
                       srcset="img/programs/studying-tablet.jpg 1x, img/programs/studying-tablet@2x.jpg 2x" width="324"
                       height="420">
                     <img src="img/programs/studying-mobile.jpg" srcset="img/programs/studying-mobile@2x.jpg 2x"
-                      width="290" height="400" alt="">
+                      width="290" height="400" alt="" loading="lazy">
                   </picture>
                 </div>
                 <div class="programs__item-text-container">
@@ -461,7 +461,7 @@
                       srcset="img/programs/women-tablet.jpg 1x, img/programs/women-tablet@2x.jpg 2x" width="324"
                       height="420">
                     <img src="img/programs/women-mobile.jpg" srcset="img/programs/women-mobile@2x.jpg 2x" width="290"
-                      height="400" alt="">
+                      height="400" alt="" loading="lazy">
                   </picture>
                 </div>
                 <div class="programs__item-text-container">
@@ -529,7 +529,7 @@
               <source type="image/jpeg" media="(min-width: 768px)"
                 srcset="img/grant/arrows-tablet.jpg 1x, img/grant/arrows-tablet@2x.jpg 2x" width="678" height="375">
               <img src="img/grant/arrows-mobile.jpg" srcset="img/grant/arrows-mobile@2x.jpg 2x" width="290" height="200"
-                alt="Стойка с прибытыми стрелками-указателями на страны.">
+                alt="Стойка с прибытыми стрелками-указателями на страны." loading="lazy">
             </picture>
           </div>
           <div class="grant__list-container">
@@ -601,7 +601,7 @@
                       srcset="img/news/persons-tablet.jpg 1x, img/news/persons-tablet@2x.jpg 2x" width="324"
                       height="350">
                     <img src="img/news/persons-mobile.jpg" srcset="img/news/persons-mobile@2x.jpg 2x" width="290"
-                      height="330" alt="">
+                      height="330" alt="" loading="lazy">
                   </picture>
                 </div>
 
@@ -633,7 +633,7 @@
                     <source type="image/jpeg" media="(min-width: 768px)"
                       srcset="img/news/sea-tablet.jpg 1x, img/news/sea-tablet@2x.jpg 2x" width="324" height="350">
                     <img src="img/news/sea-mobile.jpg" srcset="img/news/sea-mobile@2x.jpg 2x" width="290" height="240"
-                      alt="">
+                      alt="" loading="lazy">
                   </picture>
                 </div>
 
@@ -670,7 +670,7 @@
                       srcset="img/news/volunteer-tablet.jpg 1x, img/news/volunteer-tablet@2x.jpg 2x" width="324"
                       height="350">
                     <img src="img/news/volunteer-mobile.jpg" srcset="img/news/volunteer-mobile@2x.jpg 2x" width="290"
-                      height="240" alt="">
+                      height="240" alt="" loading="lazy">
                   </picture>
                 </div>
 
@@ -707,7 +707,7 @@
                       srcset="img/news/computers-tablet.jpg 1x, img/news/computers-tablet@2x.jpg 2x" width="324"
                       height="350">
                     <img src="img/news/computers-mobile.jpg" srcset="img/news/computers-mobile@2x.jpg 2x" width="290"
-                      height="240" alt="">
+                      height="240" alt="" loading="lazy">
                   </picture>
                 </div>
 
@@ -739,7 +739,7 @@
                     <source type="image/jpeg" media="(min-width: 768px)"
                       srcset="img/news/sea-tablet.jpg 1x, img/news/sea-tablet@2x.jpg 2x" width="324" height="350">
                     <img src="img/news/sea-mobile.jpg" srcset="img/news/sea-mobile@2x.jpg 2x" width="290" height="240"
-                      alt="">
+                      alt="" loading="lazy">
                   </picture>
                 </div>
 
@@ -776,7 +776,7 @@
                       srcset="img/news/volunteer-tablet.jpg 1x, img/news/volunteer-tablet@2x.jpg 2x" width="324"
                       height="350">
                     <img src="img/news/volunteer-mobile.jpg" srcset="img/news/volunteer-mobile@2x.jpg 2x" width="290"
-                      height="240" alt="">
+                      height="240" alt="" loading="lazy">
                   </picture>
                 </div>
 
@@ -813,7 +813,7 @@
                       srcset="img/news/computers-tablet.jpg 1x, img/news/computers-tablet@2x.jpg 2x" width="324"
                       height="350">
                     <img src="img/news/computers-mobile.jpg" srcset="img/news/computers-mobile@2x.jpg 2x" width="290"
-                      height="240" alt="">
+                      height="240" alt="" loading="lazy">
                   </picture>
                 </div>
 
@@ -850,7 +850,7 @@
                       srcset="img/news/computers-tablet.jpg 1x, img/news/computers-tablet@2x.jpg 2x" width="324"
                       height="350">
                     <img src="img/news/computers-mobile.jpg" srcset="img/news/computers-mobile@2x.jpg 2x" width="290"
-                      height="240" alt="">
+                      height="240" alt="" loading="lazy">
                   </picture>
                 </div>
 
@@ -887,7 +887,7 @@
                       srcset="img/news/computers-tablet.jpg 1x, img/news/computers-tablet@2x.jpg 2x" width="324"
                       height="350">
                     <img src="img/news/computers-mobile.jpg" srcset="img/news/computers-mobile@2x.jpg 2x" width="290"
-                      height="240" alt="">
+                      height="240" alt="" loading="lazy">
                   </picture>
                 </div>
 
@@ -1071,7 +1071,7 @@
                     <picture>
                       <source type="image/webp" srcset="img/reviews/lola.webp 1x, img/reviews/lola@2x.webp 2x">
                       <img src="img/reviews/lola.png" srcset="img/reviews/lola@2x.png 2x" width="90" height="90"
-                        alt="Позьзователь.">
+                        alt="Позьзователь." loading="lazy">
                     </picture>
                     <div class="reviews__item-name-container">
                       <p>Лола</p>
@@ -1104,7 +1104,7 @@
                     <picture>
                       <source type="image/webp" srcset="img/reviews/david.webp 1x, img/reviews/david@2x.webp 2x">
                       <img src="img/reviews/david.png" srcset="img/reviews/david@2x.png 2x" width="90" height="90"
-                        alt="Позьзователь.">
+                        alt="Позьзователь." loading="lazy">
                     </picture>
                     <div class="reviews__item-name-container">
                       <p>Давид</p>
@@ -1137,7 +1137,7 @@
                     <picture>
                       <source type="image/webp" srcset="img/reviews/lola.webp 1x, img/reviews/lola@2x.webp 2x">
                       <img src="img/reviews/lola.png" srcset="img/reviews/lola@2x.png 2x" width="90" height="90"
-                        alt="Позьзователь.">
+                        alt="Позьзователь." loading="lazy">
                     </picture>
                     <div class="reviews__item-name-container">
                       <p>Лола</p>
@@ -1170,7 +1170,7 @@
                     <picture>
                       <source type="image/webp" srcset="img/reviews/david.webp 1x, img/reviews/david@2x.webp 2x">
                       <img src="img/reviews/david.png" srcset="img/reviews/david@2x.png 2x" width="90" height="90"
-                        alt="Позьзователь.">
+                        alt="Позьзователь." loading="lazy">
                     </picture>
                     <div class="reviews__item-name-container">
                       <p>Давид</p>
@@ -1264,7 +1264,7 @@
               <source type="image/jpeg" media="(min-width: 768px)"
                 srcset="img/contacts/map-tablet.jpg 1x, img/contacts/map-tablet@2x.jpg 2x" width="1064" height="500">
               <img src="img/contacts/map-mobile.jpg" srcset="img/contacts/map-mobile@2x.jpg 2x" width="512" height="240"
-                alt="Карта с адресом организации: г. Новосибирск, ул. Щетинкина 68, культурный центр">
+                alt="Карта с адресом организации: г. Новосибирск, ул. Щетинкина 68, культурный центр" loading="lazy">
             </picture>
           </div>
         </div>
@@ -1288,7 +1288,7 @@
               <source type="image/jpeg" media="(min-width: 768px)"
                 srcset="img/feedback/city-tablet.jpg 1x, img/feedback/city-tablet@2x.jpg 2x" width="1168" height="780">
               <img src="img/feedback/city-mobile.jpg" srcset="img/feedback/city-mobile@2x.jpg 2x" width="768"
-                height="753" alt="">
+                height="753" alt="" loading="lazy">
             </picture>
           </div>
           <div class="feedback__text-block-container">
