--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
     <header class="header">
       <h1 class="visually-hidden">Добро пожаловать на сайт компании</h1>
       <div class="container header__container">
-        <img src="img/logo.svg" width="52" height="52" alt="Логотип компании Internship">
+        <img src="img/logo.svg" width="52" height="52" alt="Логотип компании Internship.">
         <button class="btn header__button" type="button" data-button="burger-btn">
           <span>Меню</span>
           <svg width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -128,7 +128,8 @@
                       srcset="img/hero/lady-yellow-tablet.jpg 1x, img/hero/lady-yellow-tablet@2x.jpg 2x" width="1440"
                       height="1024">
                     <img src="img/hero/lady-yellow-mobile.jpg" srcset="img/hero/lady-yellow-mobile@2x.jpg 2x"
-                      width="768" height="568" alt="" loading="lazy">
+                      width="768" height="568" alt="Девушка студент в желтой блузке и стопкой книг и тетрадок в руках."
+                      loading="lazy">
                   </picture>
                 </div>
                 <div class="hero__text-wrapper">
@@ -174,7 +175,7 @@
                       srcset="img/hero/people-tablet.jpg 1x, img/hero/people-tablet@2x.jpg 2x" width="1440"
                       height="1024">
                     <img src="img/hero/people-mobile.jpg" srcset="img/hero/people-mobile@2x.jpg 2x" width="768"
-                      height="568" alt="" loading="lazy">
+                      height="568" alt="Пять человек интернациональных волонтеров." loading="lazy">
                   </picture>
                 </div>
                 <div class="hero__text-wrapper">
@@ -222,7 +223,8 @@
                       srcset="img/hero/company-tablet.jpg 1x, img/hero/company-tablet@2x.jpg 2x" width="1440"
                       height="1024">
                     <img src="img/hero/company-mobile.jpg" srcset="img/hero/company-mobile@2x.jpg 2x" width="768"
-                      height="568" alt="" loading="lazy">
+                      height="568" alt="Работа команды из дух девушек и одного мужчины в офисе за компьютером."
+                      loading="lazy">
                   </picture>
                 </div>
                 <div class="hero__text-wrapper">
@@ -350,7 +352,7 @@
                       srcset="img/programs/women-tablet.jpg 1x, img/programs/women-tablet@2x.jpg 2x" width="324"
                       height="420">
                     <img src="img/programs/women-mobile.jpg" srcset="img/programs/women-mobile@2x.jpg 2x" width="290"
-                      height="400" alt="" loading="lazy">
+                      height="400" alt="Девушка на стажировке с проверяющим." loading="lazy">
                   </picture>
                 </div>
                 <div class="programs__item-text-container">
@@ -387,7 +389,7 @@
                       srcset="img/programs/boy-tablet.jpg 1x, img/programs/boy-tablet@2x.jpg 2x" width="324"
                       height="420">
                     <img src="img/programs/boy-mobile.jpg" srcset="img/programs/boy-mobile@2x.jpg 2x" width="290"
-                      height="400" alt="" loading="lazy">
+                      height="400" alt="Парень в перчатках и синей футболке на фоне деревьев." loading="lazy">
                   </picture>
                 </div>
                 <div class="programs__item-text-container">
@@ -424,7 +426,7 @@
                       srcset="img/programs/studying-tablet.jpg 1x, img/programs/studying-tablet@2x.jpg 2x" width="324"
                       height="420">
                     <img src="img/programs/studying-mobile.jpg" srcset="img/programs/studying-mobile@2x.jpg 2x"
-                      width="290" height="400" alt="" loading="lazy">
+                      width="290" height="400" alt="Студент за учебниками в библиотеке." loading="lazy">
                   </picture>
                 </div>
                 <div class="programs__item-text-container">
@@ -461,7 +463,7 @@
                       srcset="img/programs/women-tablet.jpg 1x, img/programs/women-tablet@2x.jpg 2x" width="324"
                       height="420">
                     <img src="img/programs/women-mobile.jpg" srcset="img/programs/women-mobile@2x.jpg 2x" width="290"
-                      height="400" alt="" loading="lazy">
+                      height="400" alt="Девушка на стажировке с проверяющим." loading="lazy">
                   </picture>
                 </div>
                 <div class="programs__item-text-container">
@@ -561,25 +563,27 @@
       <section class="news" data-test="news" id="news">
         <div class="container news__container">
           <h2>Новости и материалы</h2>
-          <div class="news__tab-list-container">
-            <ul class="news__tab-list" data-news="news-titles">
-              <li class="news__tab-item is-active" data-news="news-title" id="news-common">
-                <p>Общее</p>
-              </li>
-              <li class="news__tab-item" data-news="news-title" id="news-volunteer">
-                <p>Волонтёрство</p>
-              </li>
-              <li class="news__tab-item" data-news="news-title" id="news-internship">
-                <p>Стажировки</p>
-              </li>
-              <li class="news__tab-item" data-news="news-title" id="news-career">
-                <p>Карьера</p>
-              </li>
-              <li class="news__tab-item" data-news="news-title" id="news-travel">
-                <p>Путешествия</p>
-              </li>
-            </ul>
-          </div>
+        </div>
+        <div class="news__tab-list-container">
+          <ul class="news__tab-list" data-news="news-titles">
+            <li class="news__tab-item is-active" data-news="news-title" id="news-common">
+              <p>Общее</p>
+            </li>
+            <li class="news__tab-item" data-news="news-title" id="news-volunteer">
+              <p>Волонтёрство</p>
+            </li>
+            <li class="news__tab-item" data-news="news-title" id="news-internship">
+              <p>Стажировки</p>
+            </li>
+            <li class="news__tab-item" data-news="news-title" id="news-career">
+              <p>Карьера</p>
+            </li>
+            <li class="news__tab-item" data-news="news-title" id="news-travel">
+              <p>Путешествия</p>
+            </li>
+          </ul>
+        </div>
+        <div class="container news__container">
           <div class="news__slider-wrapper swiper" data-slider="news-slider">
             <ul class="news__slider swiper-wrapper">
               <li class="news__slider-slide news__slider-slide--wide swiper-slide">
@@ -601,7 +605,7 @@
                       srcset="img/news/persons-tablet.jpg 1x, img/news/persons-tablet@2x.jpg 2x" width="324"
                       height="350">
                     <img src="img/news/persons-mobile.jpg" srcset="img/news/persons-mobile@2x.jpg 2x" width="290"
-                      height="330" alt="" loading="lazy">
+                      height="330" alt="Студенты девушка и парень разговаривают в библиотеке." loading="lazy">
                   </picture>
                 </div>
 
@@ -633,7 +637,7 @@
                     <source type="image/jpeg" media="(min-width: 768px)"
                       srcset="img/news/sea-tablet.jpg 1x, img/news/sea-tablet@2x.jpg 2x" width="324" height="350">
                     <img src="img/news/sea-mobile.jpg" srcset="img/news/sea-mobile@2x.jpg 2x" width="290" height="240"
-                      alt="" loading="lazy">
+                      alt="Вид на море, пляж и город с высоты птичьего полета." loading="lazy">
                   </picture>
                 </div>
 
@@ -670,7 +674,7 @@
                       srcset="img/news/volunteer-tablet.jpg 1x, img/news/volunteer-tablet@2x.jpg 2x" width="324"
                       height="350">
                     <img src="img/news/volunteer-mobile.jpg" srcset="img/news/volunteer-mobile@2x.jpg 2x" width="290"
-                      height="240" alt="" loading="lazy">
+                      height="240" alt="Девушка в красной футболке со значком волонтера." loading="lazy">
                   </picture>
                 </div>
 
@@ -707,7 +711,7 @@
                       srcset="img/news/computers-tablet.jpg 1x, img/news/computers-tablet@2x.jpg 2x" width="324"
                       height="350">
                     <img src="img/news/computers-mobile.jpg" srcset="img/news/computers-mobile@2x.jpg 2x" width="290"
-                      height="240" alt="" loading="lazy">
+                      height="240" alt="Вид сверху на рабочий стол с четырьмя ноутбуками." loading="lazy">
                   </picture>
                 </div>
 
@@ -739,7 +743,7 @@
                     <source type="image/jpeg" media="(min-width: 768px)"
                       srcset="img/news/sea-tablet.jpg 1x, img/news/sea-tablet@2x.jpg 2x" width="324" height="350">
                     <img src="img/news/sea-mobile.jpg" srcset="img/news/sea-mobile@2x.jpg 2x" width="290" height="240"
-                      alt="" loading="lazy">
+                      alt="Вид на море, пляж и город с высоты птичьего полета." loading="lazy">
                   </picture>
                 </div>
 
@@ -776,7 +780,7 @@
                       srcset="img/news/volunteer-tablet.jpg 1x, img/news/volunteer-tablet@2x.jpg 2x" width="324"
                       height="350">
                     <img src="img/news/volunteer-mobile.jpg" srcset="img/news/volunteer-mobile@2x.jpg 2x" width="290"
-                      height="240" alt="" loading="lazy">
+                      height="240" alt="Девушка в красной футболке со значком волонтера." loading="lazy">
                   </picture>
                 </div>
 
@@ -813,7 +817,7 @@
                       srcset="img/news/computers-tablet.jpg 1x, img/news/computers-tablet@2x.jpg 2x" width="324"
                       height="350">
                     <img src="img/news/computers-mobile.jpg" srcset="img/news/computers-mobile@2x.jpg 2x" width="290"
-                      height="240" alt="" loading="lazy">
+                      height="240" alt="Вид сверху на рабочий стол с четырьмя ноутбуками." loading="lazy">
                   </picture>
                 </div>
 
@@ -850,7 +854,7 @@
                       srcset="img/news/computers-tablet.jpg 1x, img/news/computers-tablet@2x.jpg 2x" width="324"
                       height="350">
                     <img src="img/news/computers-mobile.jpg" srcset="img/news/computers-mobile@2x.jpg 2x" width="290"
-                      height="240" alt="" loading="lazy">
+                      height="240" alt="Вид сверху на рабочий стол с четырьмя ноутбуками." loading="lazy">
                   </picture>
                 </div>
 
@@ -887,7 +891,7 @@
                       srcset="img/news/computers-tablet.jpg 1x, img/news/computers-tablet@2x.jpg 2x" width="324"
                       height="350">
                     <img src="img/news/computers-mobile.jpg" srcset="img/news/computers-mobile@2x.jpg 2x" width="290"
-                      height="240" alt="" loading="lazy">
+                      height="240" alt="Вид сверху на рабочий стол с четырьмя ноутбуками." loading="lazy">
                   </picture>
                 </div>
 
@@ -1071,7 +1075,7 @@
                     <picture>
                       <source type="image/webp" srcset="img/reviews/lola.webp 1x, img/reviews/lola@2x.webp 2x">
                       <img src="img/reviews/lola.png" srcset="img/reviews/lola@2x.png 2x" width="90" height="90"
-                        alt="Позьзователь." loading="lazy">
+                        alt="Аватар участника программы." loading="lazy">
                     </picture>
                     <div class="reviews__item-name-container">
                       <p>Лола</p>
@@ -1104,7 +1108,7 @@
                     <picture>
                       <source type="image/webp" srcset="img/reviews/david.webp 1x, img/reviews/david@2x.webp 2x">
                       <img src="img/reviews/david.png" srcset="img/reviews/david@2x.png 2x" width="90" height="90"
-                        alt="Позьзователь." loading="lazy">
+                        alt="Аватар участника программы." loading="lazy">
                     </picture>
                     <div class="reviews__item-name-container">
                       <p>Давид</p>
@@ -1137,7 +1141,7 @@
                     <picture>
                       <source type="image/webp" srcset="img/reviews/lola.webp 1x, img/reviews/lola@2x.webp 2x">
                       <img src="img/reviews/lola.png" srcset="img/reviews/lola@2x.png 2x" width="90" height="90"
-                        alt="Позьзователь." loading="lazy">
+                        alt="Аватар участника программы." loading="lazy">
                     </picture>
                     <div class="reviews__item-name-container">
                       <p>Лола</p>
@@ -1170,7 +1174,7 @@
                     <picture>
                       <source type="image/webp" srcset="img/reviews/david.webp 1x, img/reviews/david@2x.webp 2x">
                       <img src="img/reviews/david.png" srcset="img/reviews/david@2x.png 2x" width="90" height="90"
-                        alt="Позьзователь." loading="lazy">
+                        alt="Аватар участника программы." loading="lazy">
                     </picture>
                     <div class="reviews__item-name-container">
                       <p>Давид</p>
@@ -1264,7 +1268,7 @@
               <source type="image/jpeg" media="(min-width: 768px)"
                 srcset="img/contacts/map-tablet.jpg 1x, img/contacts/map-tablet@2x.jpg 2x" width="1064" height="500">
               <img src="img/contacts/map-mobile.jpg" srcset="img/contacts/map-mobile@2x.jpg 2x" width="512" height="240"
-                alt="Карта с адресом организации: г. Новосибирск, ул. Щетинкина 68, культурный центр" loading="lazy">
+                alt="Карта с адресом организации: г. Новосибирск, ул. Щетинкина 68, культурный центр." loading="lazy">
             </picture>
           </div>
         </div>
@@ -1288,7 +1292,7 @@
               <source type="image/jpeg" media="(min-width: 768px)"
                 srcset="img/feedback/city-tablet.jpg 1x, img/feedback/city-tablet@2x.jpg 2x" width="1168" height="780">
               <img src="img/feedback/city-mobile.jpg" srcset="img/feedback/city-mobile@2x.jpg 2x" width="768"
-                height="753" alt="" loading="lazy">
+                height="753" alt="Вид на мегаполис с небоскребами с высоты птичьего полета." loading="lazy">
             </picture>
           </div>
           <div class="feedback__text-block-container">
@@ -1320,10 +1324,13 @@
                   <div class="feedback__form-label feedback__form-label--textarea" data-validate-type="text"
                     data-on-input-validate="data-on-input-validate" data-required="data-required">
                     <div>
-                      <span>
-                        Ваше сообщение
-                      </span>
-                      <textarea name="message" required></textarea>
+                      <label for="textarea">
+                        <span>
+                          Ваше сообщение
+                        </span>
+                      </label>
+
+                      <textarea name="message" id="textarea" required></textarea>
                     </div>
                   </div>
 
@@ -1335,6 +1342,7 @@
                       <span class="custom-select__icon"></span>
                     </button>
                     <ul class="custom-select__list">
+
                       <li class="custom-select__item" tabindex="0" data-select-value="Санкт-Петербург">Санкт-Петербург
                       </li>
                       <li class="custom-select__item" tabindex="0" data-select-value="Санкт-Петербург">Санкт-Петербург
@@ -1381,7 +1389,7 @@
     <footer class="footer" data-test="footer">
       <div class="container footer__container">
         <div class="footer__logo-nav-wrapper">
-          <img src="img/logo.svg" width="52" height="52" alt="Логотип компании Internship">
+          <img src="img/logo.svg" width="52" height="52" alt="Логотип компании Internship.">
           <nav class="footer__nav">
             <ul class="footer-list">
               <li class="footer-list__item">
