ПП модального окна и меню

--- a/source/index.html
+++ b/source/index.html
@@ -45,8 +45,11 @@
             </li>
             <li class="nav-list__item nav-list__item--sublisted" data-accordion="element">
               <a href="#" data-accordion="button">Программы
-                <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <!-- <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path opacity="0.6" d="M11.455 3.81812L6.00044 8.72721L0.545898 3.81812" stroke="white" />
+                </svg> -->
+                <svg width="12" height="12">
+                  <use href="__spritemap#sprite-arrow-down"></use>
                 </svg>
               </a>
 
@@ -55,7 +58,7 @@
                   <a href="#internship">Стажировки</a>
                 </li>
                 <li class="nav-list__sublist-item">
-                  <a href="#volunteer">Волотнерство</a>
+                  <a href="#volunteer">Волонтерство</a>
                 </li>
                 <li class="nav-list__sublist-item">
                   <a href="#education">Учеба</a>
@@ -1672,7 +1675,7 @@
       <div class="modal__overlay" data-close-modal="data-close-modal"></div>
       <div class="modal__content">
         <button class="modal__close-btn" type="button" data-close-modal="data-close-modal" aria-label="Закрыть попап">
-          <svg width="16" height="16">
+          <svg width="22" height="22">
             <use href="__spritemap#sprite-cross"></use>
           </svg>
         </button>
