Мелкие правки проекта

--- a/source/index.html
+++ b/source/index.html
@@ -45,9 +45,6 @@
             </li>
             <li class="nav-list__item nav-list__item--sublisted" data-accordion="element">
               <a href="#" data-accordion="button">Программы
-                <!-- <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path opacity="0.6" d="M11.455 3.81812L6.00044 8.72721L0.545898 3.81812" stroke="white" />
-                </svg> -->
                 <svg width="12" height="12">
                   <use href="__spritemap#sprite-arrow-down"></use>
                 </svg>
@@ -77,8 +74,8 @@
             </li>
             <li class="nav-list__item nav-list__item--sublisted" data-accordion="element">
               <a href="#" data-accordion="button">Новости
-                <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path opacity="0.6" d="M11.455 3.81812L6.00044 8.72721L0.545898 3.81812" stroke="white" />
+                <svg width="12" height="12">
+                  <use href="__spritemap#sprite-arrow-down"></use>
                 </svg>
               </a>
 
@@ -1554,7 +1551,7 @@
                     </button>
                     <ul class="custom-select__list">
 
-                      <li class="custom-select__item" tabindex="0" data-select-value="Санкт-Петербург">Санкт-Петербург
+                      <li class="custom-select__item" tabindex="0" data-select-value="none">
                       </li>
                       <li class="custom-select__item" tabindex="0" data-select-value="Санкт-Петербург">Санкт-Петербург
                       </li>
@@ -1712,7 +1709,7 @@
                 <span class="custom-select__icon custom-select__icon--modal"></span>
               </button>
               <ul class="custom-select__list custom-select__list--modal">
-                <li class="custom-select__item" tabindex="0" data-select-value="Санкт-Петербург">Санкт-Петербург
+                <li class="custom-select__item" tabindex="0" data-select-value="none">
                 </li>
                 <li class="custom-select__item" tabindex="0" data-select-value="Санкт-Петербург">Санкт-Петербург
                 </li>
