Дополнительные мелкие правки по селекту и разметки

--- a/source/index.html
+++ b/source/index.html
@@ -1565,7 +1565,7 @@
                   <div class="feedback__form-label feedback__form-label--checkbox" data-validate-type="checkbox"
                     data-message-base="Ошибка">
                     <label>
-                      <input class="visually-hidden feedback__default-checkbox" type="checkbox" name="agree" id="agree">
+                      <input type="checkbox" name="agree" id="agree">
                       <span class="feedback__custom-checkbox">
                         <svg width="10" height="10">
                           <use href="__spritemap#sprite-check"></use>
@@ -1723,7 +1723,7 @@
             <div class="modal__form-label modal__form-label--checkbox" data-validate-type="checkbox"
               data-message-base="Ошибка">
               <label>
-                <input class="visually-hidden modal__default-checkbox" type="checkbox" name="agree">
+                <input type="checkbox" name="agree">
                 <span class="modal__custom-checkbox">
                   <svg width="10" height="10">
                     <use href="__spritemap#sprite-check"></use>
